--- a/public/index.html
+++ b/public/index.html
@@ -28,15 +28,37 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
-                <h1>Grocery Application</h1>
-                <p>stuff and things</p>
+            <div class="col-md-12" id="landing">
+                <div class="containerStyles">
+                    <h1>Grocery Application</h1>
+                    <p>stuff and things
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                    </p>
+                </div>
+
             </div>
         </div>
     </div>
 
 
-    
+
     <div id="footer">
         © Brock | Ozair | Taylor | Shelby
     </div>
