--- a/public/index.html
+++ b/public/index.html
@@ -31,14 +31,10 @@
             <div class="col-md-12" id="landing">
                 <div class="containerStyles">
                     <h1>Grocery Application</h1>
-                    <p>stuff and things
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
+                    <p id="intro">An application that not only maintains your current fridge and pantry
+                        <br> inventory, but reminds you when your food is about to expire! Add a shopping list
+                        <br>and keep your groceries organized with our
+                        <br>*AMAZING APP THAT DOESN'T HAVE A NAME YET*!!!!
                         <br>
                         <br>
                         <br>
@@ -57,6 +53,66 @@
         </div>
     </div>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5 inventories">
+                <div id="groceries">
+                    <h2>Groceries to Get</h2>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                </div>
+            </div>
+
+            <div class="col-md-5 inventories">
+                <div id="inventory">
+                    <h2>Current Inventory</h2>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-5 expire">
+                        <div id="expiringSoon">
+                            <h2>Expiring Soon</h2>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                        </div>
+                    </div>
+
+                    <div class="col-md-5 expire">
+                        <div id="expired">
+                            <h2>Expired</h2>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
 
 
     <div id="footer">
