--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Grocery App</title>
+    <link rel="icon" href="./images/silverware.png">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -38,7 +39,7 @@
 
                     <div class="container">
                         <div class="row" id="loginContainer">
-                            <div class="col-md-6">
+                            <div class="col-md-6" "loginContainers">
                                 <form class="login">
                                     <div class="form-group">
                                         <label for="exampleInputEmail1">Sign In!</label>
@@ -50,7 +51,7 @@
                                     <button type="submit" class="btn btn-default">Login</button>
                                 </form>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-6" "loginContainers">
                                 <h2> Don't have an account? Sign up here!</h2>
                                 <a id="signUpButton" href="/register" class="btn btn-info" role="button">Let's GROCERY!</a>
                             </div>
@@ -62,10 +63,12 @@
         </div>
     </div>
 
-    <div id="footer">
-        © Brock | Ozair | Taylor | Shelby
-    </div>
 
+    <div id="footerContainer">
+        <div id="footer">
+            © Brock | Ozair | Taylor | Shelby
+        </div>
+    </div>
     <script type="text/javascript" src="js/login.js"></script>
 </body>
 
