--- a/public/login.html
+++ b/public/login.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Passport Authentication</title>
+  <link rel="icon" href="./images/silverware.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
@@ -33,8 +34,16 @@
           <button type="submit" class="btn btn-default">Login</button>
         </form>
         <br />
-        <p>Or sign up <a href="/">here</a></p>
+        <p>Or sign up
+          <a href="/">here</a>
+        </p>
       </div>
+    </div>
+  </div>
+
+  <div id="footerContainer">
+    <div id="footer">
+      © Brock | Ozair | Taylor | Shelby
     </div>
   </div>
 
