--- a/public/members.html
+++ b/public/members.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Passport Authentication</title>
+  <link rel="icon" href="./images/silverware.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
@@ -22,7 +23,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h2>Welcome, 
+        <h2>Welcome,
           <span class="member-name"></span>
         </h2>
       </div>
@@ -87,6 +88,12 @@
         </div>
       </div>
 
+    </div>
+  </div>
+
+  <div id="footerContainer">
+    <div id="footer">
+      © Brock | Ozair | Taylor | Shelby
     </div>
   </div>
 
