--- a/public/signup.html
+++ b/public/signup.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Passport Authentication</title>
+  <link rel="icon" href="./images/silverware.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
@@ -31,13 +32,22 @@
           </div>
           <div style="display: none" id="alert" class="alert alert-danger" role="alert">
             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-            <span class="sr-only">Error:</span> <span class="msg"></span>
+            <span class="sr-only">Error:</span>
+            <span class="msg"></span>
           </div>
           <button type="submit" class="btn btn-default">Sign Up</button>
         </form>
         <br />
-        <p>Or log in <a href="/login">here</a></p>
+        <p>Or log in
+          <a href="/login">here</a>
+        </p>
       </div>
+    </div>
+  </div>
+
+  <div id="footerContainer">
+    <div id="footer">
+      © Brock | Ozair | Taylor | Shelby
     </div>
   </div>
 
