--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,11 @@
         <div class="row" id="indexContent">
             <div class="col-md-12" id="landing">
                 <div class="containerStyles">
-                    <h1>Grocery Application</h1>
+                    <h1>Jalapeño Business</h1>
                     <p id="intro">An application that not only maintains your current fridge and pantry
                         <br> inventory, but reminds you when your food is about to expire! Add a shopping list
-                        <br>and keep your groceries organized with our
-                        <br>*AMAZING APP THAT DOESN'T HAVE A NAME YET*!!!!</p>
+                        <br>and keep your groceries organized with our first full-stack app!
+                    </p>
 
                     <div class="container">
                         <div class="row" id="loginContainer">
