This is the data needed to sort the sections properly

--- a/public/members.html
+++ b/public/members.html
@@ -64,7 +64,12 @@
               <input type="number" name="quantity">
               <br> Expiration Date:
               <input id="date" type="date" name="date">
-              <br>
+              <br> Expiration Notification Date:
+              <input type="date" name="notification">
+              <br> Currently Owned: <select name="owned">
+                  <option value="true">Pantry</option>
+                  <option value="false">Shopping List</option>
+                </select>
 
               <input type="submit">
               <br>
