--- a/public/members.html
+++ b/public/members.html
@@ -89,6 +89,7 @@
       <div class="col-md-5 inventories">
         <div id="groceries">
           <h2>Groceries to Get</h2>
+          <span id="groceriesToGet" ></span>
           <br>
           <br>
           <br>
@@ -102,6 +103,7 @@
       <div class="col-md-5 inventories">
         <div id="inventory">
           <h2>Current Inventory</h2>
+          <span id="groceriesOwned" ></span>
           <br>
           <br>
           <br>
@@ -150,11 +152,11 @@
       © Brock | Ozair | Taylor | Shelby
     </div>
   </div>
-  <script type="text/javascript" src="js/members.js"></script>
   
-
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
- 
+  
+  <script type="text/javascript" src="js/members.js"></script>
 
 </body>
