expiring and expiring soon categories working

--- a/public/members.html
+++ b/public/members.html
@@ -86,7 +86,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-5 inventories">
+      <div class="col-md-5 inventories Center">
         <div id="groceries">
           <h2>Groceries to Get</h2>
           <span id="groceriesToGet" ></span>
@@ -100,7 +100,7 @@
         </div>
       </div>
 
-      <div class="col-md-5 inventories">
+      <div class="col-md-5 inventories Center">
         <div id="inventory">
           <h2>Current Inventory</h2>
           <span id="groceriesOwned" ></span>
@@ -114,11 +114,12 @@
         </div>
       </div>
 
-      <div class="container">
+      <div class="container Center">
         <div class="row">
           <div class="col-md-5 expire">
             <div id="expiringSoon">
               <h2>Expiring Soon</h2>
+              <span id="groceriesExpiringSoon" ></span>
               <br>
               <br>
               <br>
@@ -129,9 +130,10 @@
             </div>
           </div>
 
-          <div class="col-md-5 expire">
+          <div class="col-md-5 expire Center">
             <div id="expired">
               <h2>Expired</h2>
+              <span id="groceriesExpired" ></span>
               <br>
               <br>
               <br>
@@ -156,7 +158,7 @@
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/moment.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
 
 </body>
